--- a/pom.xml
+++ b/pom.xml
@@ -130,8 +130,8 @@
             <url>https://github.com/deanveloper/SkullCreator/raw/mvn-repo/</url>
         </repository>
         <repository>
-            <id>itemsadder-repo</id>
-            <url>https://maven.pkg.github.com/LoneDev6/API-ItemsAdder</url>
+            <id>matteodev</id>
+            <url>https://maven.devs.beer/</url>
         </repository>
         <repository>
             <id>codemc-repo</id>
@@ -171,9 +171,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.LoneDev6</groupId>
+            <groupId>dev.lone</groupId>
             <artifactId>api-itemsadder</artifactId>
-            <version>3.2.5</version>
+            <version>4.0.10</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
