--- a/pom.xml
+++ b/pom.xml
@@ -159,7 +159,7 @@
         <dependency>
             <groupId>com.tchristofferson</groupId>
             <artifactId>ConfigUpdater</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>2.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
